# Objektorientierung

./: CMakeLists.txt  Car.cpp  Car.h  Dealership.cpp  Dealership.h  Garage.cpp  Garage.h  Motorbike.cpp  Motorbike.h  Vehicle.cpp  Vehicle.h  main.cpp
